fixed alignment and visuals for results box

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -170,7 +170,7 @@ body{
                     select{
                         box-shadow: 0 2.25px 1px rgba(0,0,0,0.5) !important;
                         border-top: 0.5px solid rgba(0,0,0,0.15);
-                        border-left: 0.5px solid rgba(0,0,0,0.15);;
+                        border-left: 0.5px solid rgba(0,0,0,0.15);
                     }
                     #selectManufacturer{
                         margin-right: 0.6rem;
@@ -181,6 +181,25 @@ body{
             .cross-ref-main-content{ // MODAL TWO ONLY
                 width: 48%;
                 height: 75%;
+                
+
+                .dropdown-nav-results{
+                    height: 100%;
+                    box-shadow: 1px 2.25px 1px rgba(0,0,0,0.5);
+                    border: 1px solid rgba(0,0,0,0.5);
+                    .card-header{
+                        background: $primary-red;
+                        h6{
+                            color: #fff;
+                            font-family: $primary-font;
+                            font-size: 1.25em;
+                            letter-spacing: 0.1rem;
+                            font-weight: 400;
+                            padding: 0;
+                            margin: auto 0;;
+                        }
+                    }
+                }
             }
         }
 
